# applied_software_development_python_2026_dev

./: .gitignore  README.md  check_images.py  check_urls.sh  download_final.py  download_final2.py  download_imgs.py  find_images2.py  find_images3.py  find_images4.py  find_images5.py  find_more_images.py
.specify/memory/: constitution.md
lectures/01-python-intro/: lecture-01.ipynb
lectures/02-core-mechanics/: lecture-02.ipynb
lectures/03-data-structures/: lecture-03.ipynb
lectures/04-functions-modules-errors-oop/: download_images.py  image_mapping.json  lecture-04.ipynb
lectures/05-oop-files/: lecture-05.ipynb
lectures/06-web-fastapi/: lecture-06.ipynb
lectures/06-web-fastapi-mcp/: lecture-06.ipynb
lectures/07-async-testing/: lecture-07.ipynb
lectures/07-integrations-async-mcp/: lecture-07.ipynb
lectures/08-mcp/: lecture-08.ipynb
lectures/09-docker-postgres-sqlalchemy/: lecture-09.ipynb
project/notes-api/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  test.db
project/notes-api/alembic/: env.py
project/notes-api/alembic/versions/: 14458ff7b2b5_initial_notes_table.py  1f835e342a17_add_tags_table.py
project/notes-api/app/: config.py  database.py  main.py
project/notes-api/app/models/: __init__.py  note.py  tag.py
project/notes-api/app/repositories/: notes.py
project/notes-api/app/routers/: notes.py
project/notes-api/app/schemas/: notes.py
project/notes-api/app/services/: notes.py
project/notes-api/tests/: conftest.py  test_health.py  test_notes.py
scripts/: polish_check.py
(+143 files in other folders)
