[project]
name = "notes-api"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "alembic",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "httpx>=0.28.1",
    "pytest",
]
